--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "13.5.0",
     "axios": "0.27.2",
     "bootstrap": "5.2.0",
+    "i18next": "^23.7.16",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "lodash": "4.17.21",
     "nprogress": "0.2.0",
     "react": "18.2.0",
     "react-awesome-lightbox": "1.8.1",
     "react-bootstrap": "2.4.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.0.0",
     "react-icons": "4.4.0",
     "react-paginate": "8.1.3",
     "react-perfect-scrollbar": "^1.5.8",
